Bug 465535 - Fix deletion of contact from a mailing list within the quick search results. r=jorgk

--HG--
extra : rebase_source : cf78132ebc70c2f7dc65ccc4d573333621d204b9